--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.5.0",
     "knex": "^2.1.0",
     "minimist": "^1.2.6",
     "mongoose": "^6.4.5",
